libavcodec/aac/aacdec.h
@@ -210,6 +210,13 @@ typedef struct AACDecProc {
                                        SingleChannelElement *sce);
 
     int (*decode_cce)(AACDecContext *ac, GetBitContext *gb, ChannelElement *che);
+
+    int (*sbr_ctx_alloc_init)(AACDecContext *ac, ChannelElement **che, int id_aac);
+    int (*sbr_decode_extension)(AACDecContext *ac, ChannelElement *che,
+                                GetBitContext *gb, int crc, int cnt, int id_aac);
+    void (*sbr_apply)(AACDecContext *ac, ChannelElement *che,
+                      int id_aac, void /* INTFLOAT */ *L, void /* INTFLOAT */ *R);
+    void (*sbr_ctx_close)(ChannelElement *che);
 } AACDecProc;
 
 /**
